	                          is a static package.
	* generic/tclEncoding.c   Updated freeIntRepProc routines so
                              that they set the typePtr field to
                              NULL so that the Tcl_Obj is not left
                              in an inconsistent state.
                              [Bug 2857044]
      

2009-11-19  Don Porter  <dgp@users.sourceforge.net>

	* unix/tclAppInit.c:	Repair broken build of the tcltest executable.
	* win/tclAppInit.c:	[Bug 2883850, 2900542].

2009-11-19  Donal K. Fellows  <dkf@users.sf.net>

	* library/auto.tcl (tcl_findLibrary):
	* library/clock.tcl (MakeUniquePrefixRegexp, MakeParseCodeFromFields)
	(SetupTimeZone, ProcessPosixTimeZone):	Restored the use of a literal
	* library/history.tcl (HistAdd):	'then' when following a multi-
	* library/safe.tcl (interpConfigure):	line test expresssion. It's an
	* library/tm.tcl (UnknownHandler):	aid to readability then.

2009-11-19  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclInt.h       Make all internal initialization
	* generic/tclTest.c      routines MODULE_SCOPE
	* generic/tclTestObj.c
	* generic/tclTestProcBodyObj.c
	* generic/tclThreadTest.c
	* unix/Makefile.in       Fix [Bug 2883850]: pkgIndex.tcl doesn't
	* unix/tclAppInit.c      get created with static Tcl build
	* unix/tclXtTest.c
	* unix/tclXtNotify.c
	* unix/tclUnixTest.c
	* win/Makefile.in
	* win/tcl.m4
	* win/configure          (regenerated)
	* win/tclAppInit.c
	* win/tclWinDde.c        Always compile with Stubs.
	* win/tclWinReg.c
	* win/tclWinTest.c

2009-11-18  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/CrtChannel.3      Fix [Bug 2849797]: channel name inconsistencies
	* generic/tclIORChan.c  as suggested by DKF
	* generic/tclIO.c       minor *** POTENTIAL INCOMPATIBILITY *** because
	                        Tcl_CreateChannel() and its derivatives, now
	                        sometimes ignore their "chanName" argument.
